--- a/Engine/Project/Engine.vcxproj
+++ b/Engine/Project/Engine.vcxproj
@@ -194,6 +194,7 @@ call Engine.bat</Command>
     <ClInclude Include="..\Header\MathStruct.hpp" />
     <ClInclude Include="..\Header\Mesh.h" />
     <ClInclude Include="..\Header\Object.h" />
+    <ClInclude Include="..\Header\Renderer.h" />
     <ClInclude Include="..\Header\Resource.h" />
     <ClInclude Include="..\Header\Resources.h" />
     <ClInclude Include="..\Header\Resources.hpp" />
@@ -226,6 +227,7 @@ call Engine.bat</Command>
     <ClCompile Include="..\Source\InputSystem.cpp" />
     <ClCompile Include="..\Source\Mesh.cpp" />
     <ClCompile Include="..\Source\Object.cpp" />
+    <ClCompile Include="..\Source\Renderer.cpp" />
     <ClCompile Include="..\Source\Resource.cpp" />
     <ClCompile Include="..\Source\Resources.cpp" />
     <ClCompile Include="..\Source\ResourceSystem.cpp" />
