--- a/Engine/Project/Engine.vcxproj
+++ b/Engine/Project/Engine.vcxproj
@@ -128,9 +128,9 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>ENGINE_EXPORT;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>ENGINE_EXPORT;IMGUI_ENGINE;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>../../Reference/Header/;./;../Source/;../Header/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../Reference/Header/;./;../Source/;../Header/;../Source/imgui/;../../Reference/Header/imgui/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
@@ -151,9 +151,9 @@ call Engine.bat</Command>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>ENGINE_EXPORT;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>ENGINE_EXPORT;IMGUI_ENGINE;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>../../Reference/Header/;./;../Source/;../Header/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../Reference/Header/;./;../Source/;../Header/;../Source/imgui/;../../Reference/Header/imgui/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
@@ -171,6 +171,14 @@ call Engine.bat</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Reference\Header\imgui\imconfig.h" />
+    <ClInclude Include="..\..\Reference\Header\imgui\imgui.h" />
+    <ClInclude Include="..\..\Reference\Header\imgui\imgui_impl_dx9.h" />
+    <ClInclude Include="..\..\Reference\Header\imgui\imgui_impl_win32.h" />
+    <ClInclude Include="..\..\Reference\Header\imgui\imgui_internal.h" />
+    <ClInclude Include="..\..\Reference\Header\imgui\imstb_rectpack.h" />
+    <ClInclude Include="..\..\Reference\Header\imgui\imstb_textedit.h" />
+    <ClInclude Include="..\..\Reference\Header\imgui\imstb_truetype.h" />
     <ClInclude Include="..\Header\AssimpHelper.hpp" />
     <ClInclude Include="..\Header\Component.h" />
     <ClInclude Include="..\Header\Core.h" />
@@ -219,6 +227,13 @@ call Engine.bat</Command>
     <ClCompile Include="..\Source\GameObject.cpp" />
     <ClCompile Include="..\Source\Graphic.cpp" />
     <ClCompile Include="..\Source\GraphicSystem.cpp" />
+    <ClCompile Include="..\Source\imgui\imgui.cpp" />
+    <ClCompile Include="..\Source\imgui\imgui_demo.cpp" />
+    <ClCompile Include="..\Source\imgui\imgui_draw.cpp" />
+    <ClCompile Include="..\Source\imgui\imgui_impl_dx9.cpp" />
+    <ClCompile Include="..\Source\imgui\imgui_impl_win32.cpp" />
+    <ClCompile Include="..\Source\imgui\imgui_tables.cpp" />
+    <ClCompile Include="..\Source\imgui\imgui_widgets.cpp" />
     <ClCompile Include="..\Source\Input.cpp" />
     <ClCompile Include="..\Source\InputSystem.cpp" />
     <ClCompile Include="..\Source\Mesh.cpp" />
