--- a/Engine/Project/Engine.vcxproj
+++ b/Engine/Project/Engine.vcxproj
@@ -192,6 +192,7 @@ call Engine.bat</Command>
     <ClInclude Include="..\Header\InputSystem.h" />
     <ClInclude Include="..\Header\MathStruct.hpp" />
     <ClInclude Include="..\Header\Mesh.h" />
+    <ClInclude Include="..\Header\MeshRenderer.h" />
     <ClInclude Include="..\Header\Object.h" />
     <ClInclude Include="..\Header\Renderer.h" />
     <ClInclude Include="..\Header\Resource.h" />
@@ -221,6 +222,7 @@ call Engine.bat</Command>
     <ClCompile Include="..\Source\Input.cpp" />
     <ClCompile Include="..\Source\InputSystem.cpp" />
     <ClCompile Include="..\Source\Mesh.cpp" />
+    <ClCompile Include="..\Source\MeshRenderer.cpp" />
     <ClCompile Include="..\Source\Object.cpp" />
     <ClCompile Include="..\Source\Renderer.cpp" />
     <ClCompile Include="..\Source\Resource.cpp" />
