--- a/Client/Project/imgui.ini
+++ b/Client/Project/imgui.ini
@@ -1,11 +1,11 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=100,100
+Size=550,600
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=709,86
-Size=550,544
+Pos=687,52
+Size=550,434
 Collapsed=0
 
 [Window][ewqe]
@@ -16,5 +16,20 @@ Collapsed=0
 [Window][sRGBToLinear]
 Pos=186,48
 Size=251,611
+Collapsed=0
+
+[Window][Test]
+Pos=60,60
+Size=285,249
+Collapsed=0
+
+[Window][Hellow MapTool]
+Pos=0,10
+Size=400,600
+Collapsed=0
+
+[Window][Hellow Pivot]
+Pos=930,520
+Size=350,200
 Collapsed=0
 
