--- a/Engine/Project/Engine.vcxproj.filters
+++ b/Engine/Project/Engine.vcxproj.filters
@@ -18,7 +18,6 @@
     <ClCompile Include="..\Source\Input.cpp" />
     <ClCompile Include="..\Source\InputSystem.cpp" />
     <ClCompile Include="..\Source\Mesh.cpp" />
-    <ClCompile Include="..\Source\MeshRenderer.cpp" />
     <ClCompile Include="..\Source\Object.cpp" />
     <ClCompile Include="..\Source\Renderer.cpp" />
     <ClCompile Include="..\Source\Resource.cpp" />
@@ -36,6 +35,8 @@
     <ClCompile Include="..\Source\Transform.cpp" />
     <ClCompile Include="..\Source\RenderTargetSystem.cpp" />
     <ClCompile Include="..\Source\RenderTarget.cpp" />
+    <ClCompile Include="..\Source\RenderInterface.cpp" />
+    <ClCompile Include="..\Source\RenderInformation.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Reference\Header\imgui\imconfig.h" />
@@ -68,7 +69,6 @@
     <ClInclude Include="..\Header\InputSystem.h" />
     <ClInclude Include="..\Header\MathStruct.hpp" />
     <ClInclude Include="..\Header\Mesh.h" />
-    <ClInclude Include="..\Header\MeshRenderer.h" />
     <ClInclude Include="..\Header\Object.h" />
     <ClInclude Include="..\Header\Renderer.h" />
     <ClInclude Include="..\Header\RenderProperty.h" />
@@ -90,6 +90,9 @@
     <ClInclude Include="..\Header\Transform.h" />
     <ClInclude Include="..\Header\RenderTargetSystem.h" />
     <ClInclude Include="..\Header\RenderTarget.h" />
-    <ClInclude Include="..\..\Resource\Shader\HDR.hlsl" />
+    <ClInclude Include="..\Header\RenderInterface.h" />
+    <ClInclude Include="..\Header\RenderInformation.h" />
+    <ClInclude Include="..\..\Resource\Shader\ForwardAlphaBlend.hlsl" />
+    <ClInclude Include="..\Header\TextureType.h" />
   </ItemGroup>
 </Project>
