--- a/Client/Project/imgui.ini
+++ b/Client/Project/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=442,43
+Pos=729,13
 Size=550,545
 Collapsed=0
 
@@ -24,13 +24,13 @@ Size=400,600
 Collapsed=0
 
 [Window][Hellow Pivot]
-Pos=930,511
+Pos=930,520
 Size=350,200
 Collapsed=0
 
 [Window][Delete?]
-Pos=508,304
-Size=264,112
+Pos=593,245
+Size=18,4
 Collapsed=0
 
 [Window][Stacked 2]
@@ -39,7 +39,95 @@ Size=181,68
 Collapsed=0
 
 [Window][Stacked 1]
-Pos=481,278
+Pos=483,278
 Size=319,164
 Collapsed=0
+
+[Window][New Table?]
+Pos=540,326
+Size=224,68
+Collapsed=0
+
+[Table][0xC9935533,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x64418101,3]
+RefScale=12
+Column 0  Width=47
+Column 1  Width=45
+Column 2  Width=47
+
+[Table][0x47600645,3]
+RefScale=12
+Column 0  Width=49
+Column 1  Width=46
+Column 2  Weight=1.0000
+
+[Table][0xDE6957FF,6]
+RefScale=12
+Column 0  Width=49
+Column 1  Width=46
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
+[Table][0x861D378E,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x1F146634,3]
+RefScale=12
+Column 0  Width=49
+Column 1  Width=46
+Column 2  Width=49
+
+[Table][0x8DFA6E86,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xFABAAEF7,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xA43C3885,3]
+RefScale=12
+Column 0  Width=40
+Column 1  Width=38
+Column 2  Width=40
+
+[Table][0x49F8DCEA,3]
+RefScale=12
+Column 0  Weight=1.0000
+Column 1  Width=108
+Column 2  Width=162
+
+[Table][0x82CBB907,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x49D11DC0,3]
+RefScale=12
+Column 0  Width=61
+Column 1  Width=59
+Column 2  Width=61
+
+[Table][0xE0773582,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x45A0E60D,7]
+RefScale=12
+Column 0  Width=37
+Column 1  Width=81
+Column 2  Width=83
+Column 3  Width=83
+Column 4  Width=84
+Column 5  Width=83
+Column 6  Width=84
 
