--- a/Client/Project/imgui.ini
+++ b/Client/Project/imgui.ini
@@ -44,7 +44,22 @@ Size=319,164
 Collapsed=0
 
 [Window][New Table?]
-Pos=540,326
+Pos=543,326
+Size=224,68
+Collapsed=0
+
+[Window][LoadingList]
+Pos=531,326
+Size=224,68
+Collapsed=0
+
+[Window][Save LoadingList]
+Pos=530,326
+Size=224,68
+Collapsed=0
+
+[Window][Save ObjInfo]
+Pos=529,326
 Size=224,68
 Collapsed=0
 
