클론들 노드구조 딥카피 애니메이션 독립적으로

--- a/Client/Project/imgui.ini
+++ b/Client/Project/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=41,33
+Pos=295,483
 Size=235,671
 Collapsed=0
 
@@ -29,17 +29,27 @@ Size=239,199
 Collapsed=0
 
 [Window][System]
-Pos=1047,36
+Pos=1019,470
 Size=201,160
 Collapsed=0
 
 [Window][Object Editor]
-Pos=843,205
-Size=397,514
+Pos=699,540
+Size=355,514
 Collapsed=0
 
 [Window][Edit TestObject8]
-Pos=455,185
+Pos=469,234
 Size=345,393
+Collapsed=0
+
+[Window][Edit TestObject51]
+Pos=827,62
+Size=356,354
+Collapsed=1
+
+[Window][Edit TestObject54]
+Pos=289,59
+Size=213,215
 Collapsed=0
 
